# docker-flask

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
